--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </script>
 
 <br><br>
-<object data="http://foersom.com/net/HowTo/data/OoPdfFormExample.pdf" type="application/pdf" width="100%"
+<object data="https://irs.gov/pub/irs-pdf/fw9.pdf" type="application/pdf" width="100%"
         height="800px">
     <p>It appears you don't have a PDF plugin for this browser.</p>
 </object>
